add dave and patrick

--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
               <li>Phone: (850)-463-0010</li>
               <li>Email: team@devtoo.net</li>
             </ul>
-          </div>
-        </div>
-        <div id="description">
           <p>
             We focus on real-time web applications utilizing Python,
 Pyramid, Socket.io, and Backbone.js.
@@ -32,22 +29,42 @@ Pyramid, Socket.io, and Backbone.js.
           <p>
             If you need an <strong>application</strong>, lets talk.
           </p>
+          </div>
+        </div>
+        <div id="description">
           <div id="employees">
-            <div>
+            <div id="dave">
+                <img src="dave.jpg" />
+                <div>
+                  <h4>David Burt</h4>
+                  David is a Global MBA graduate and currently manages our Sales and Marketing.
+                </div>
+            </div>
+            <br class="clear" />
+            <div id="jessie">
                 <img src="jessie.jpg" />
                 <div>
                   <h4>Jessie Anderson</h4>
                   Resident mathematician and project manager. When she isn't solving
-algorithms for John she works as translator for our clients so they know
-exactly what to expect.
+algorithms for John she works as translator for our clients so they know exactly what to expect.
                 </div>
             </div>
-            <div>
+            <br class="clear" />
+            <div id="john">
                 <img src="john.jpg" />
                 <div>
                   <h4>John Anderson</h4>
                   Python hacker and software visionary who is passionate about open source
                   and test driven development.
+                </div>
+            </div>
+            <br class="clear" />
+            <div>
+                <img src="patrick.jpg" />
+                <div>
+                  <h4>Patrick Canfield</h4>
+                  Engineer and User Experience expert, Patrick spends his time making
+                  our applications perfect for the users.
                 </div>
             </div>
             <br class="clear" />
